--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,12 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.0.0 - 2023-07-18
+
+- V1 Stable Release
+
+### V1 Betas
+
 #### V1.0.0-beta.28
 
 - New Loading Overlay in Table Container to indicate loading state that will show when `state.isLoading` or `state.showLoadingOverlay` is `true`
