--- a/apps/mantine-react-table-docs/pages/docs/guides/expanding-sub-rows.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/expanding-sub-rows.mdx
@@ -55,9 +55,9 @@ Mantine React Table has support for expanding sub-rows or tree data. This featur
 
 ### Enable Expanding Sub-Rows
 
-To enable expanding sub-rows, you must first set the `enableExpanding` prop to `true`.
+To enable expanding sub-rows, you must first set the `enableExpanding` table option to `true`.
 
-However, your data must also be formatted in a way to allow for expanding rows that are in some way related to each other. By default, Mantine React Table will look for a special `subRows` property on each row of your data and treat any array of rows that it finds as the sub-rows for that row. You can customize or override this behavior by passing a custom `getSubRows` prop.
+However, your data must also be formatted in a way to allow for expanding rows that are in some way related to each other. By default, Mantine React Table will look for a special `subRows` property on each row of your data and treat any array of rows that it finds as the sub-rows for that row. You can customize or override this behavior by passing a custom `getSubRows` table option.
 
 ```jsx
 const data = [
@@ -73,42 +73,42 @@ const data = [
   },
 ];
 
-return (
-  <MantineReactTable
-    columns={columns}
-    data={data}
-    enableExpanding
-    getSubRows={(originalRow) => originalRow.subRows} //default, can customize
-  />
-);
+const table = useMantineReactTable({
+  columns,
+  data,
+  enableExpanding: true,
+  getSubRows: (originalRow) => originalRow.subRows, //default, can customize
+});
+
+return <MantineReactTable table={table} />;
 ```
 
 <EnableExample />
 
 ### Expand All Rows Button
 
-By default, Mantine React Table will show the expand all button in the expand column header. You can disable this by setting the `enableExpandAll` prop to `false`.
+By default, Mantine React Table will show the expand all button in the expand column header. You can disable this by setting the `enableExpandAll` table option to `false`.
 
 ```jsx
-<MantineReactTable
-  columns={columns}
-  data={data}
-  enableExpanding
-  enableExpandAll={false} //hide expand all button in header
-/>
+const table = useMantineReactTable({
+  columns,
+  data,
+  enableExpanding: true,
+  enableExpandAll: false, //hide expand all button in header
+});
 ```
 
 ### Expanded Rows Pagination Behavior
 
-By default, Mantine React Table will treat expanded sub-rows the same as any other row when it comes to pagination. This means that some expanded rows may be on the next page. You can change this behavior by setting the `paginateExpandedRows` prop to `false`.
+By default, Mantine React Table will treat expanded sub-rows the same as any other row when it comes to pagination. This means that some expanded rows may be on the next page. You can change this behavior by setting the `paginateExpandedRows` table option to `false`.
 
 ```jsx
-<MantineReactTable
-  columns={columns}
-  data={data}
-  enableExpanding
-  paginateExpandedRows={false} //expanded rows will be on the same page as their parent row
-/>
+const table = useMantineReactTable({
+  columns,
+  data,
+  enableExpanding: true,
+  paginateExpandedRows: false, //expanded rows will be on the same page as their parent row
+});
 ```
 
 ### Expanded Leaf Row Filtering Behavior
@@ -117,45 +117,45 @@ If you are using the [filtering features](/docs/guides/column-filtering) alongsi
 
 #### Filter From Leaf Rows
 
-By default, filtering is done from parent rows down (so if a parent row is filtered out, all of its children will be filtered out as well). Setting the `filterFromLeafRows` prop to `true` will cause filtering to be done from leaf rows up (which means parent rows will be kept so long as one of their child, or grand-child, etc. rows pass the filtering).
+By default, filtering is done from parent rows down (so if a parent row is filtered out, all of its children will be filtered out as well). Setting the `filterFromLeafRows` table option to `true` will cause filtering to be done from leaf rows up (which means parent rows will be kept so long as one of their child, or grand-child, etc. rows pass the filtering).
 
 ```jsx
-<MantineReactTable
-  columns={columns}
-  data={data}
-  enableExpanding
-  filterFromLeafRows //search for child rows and preserve parent rows
-/>
+const table = useMantineReactTable({
+  columns,
+  data,
+  enableExpanding: true,
+  filterFromLeafRows: true, //search for child rows and preserve parent rows
+});
 ```
 
 #### Max Leaf Row Filter Depth
 
-By default, filtering is done for all rows (max depth of 100), no matter if they are root level parent rows or the child leaf rows of a parent row. Setting the `maxLeafRowFilterDepth` prop to `0` will cause filtering to only be applied to the root level parent rows, with all sub-rows remaining unfiltered. Similarly, setting this option to 1 will cause filtering to only be applied to child leaf rows 1 level deep, and so on.
+By default, filtering is done for all rows (max depth of 100), no matter if they are root level parent rows or the child leaf rows of a parent row. Setting the `maxLeafRowFilterDepth` table option to `0` will cause filtering to only be applied to the root level parent rows, with all sub-rows remaining unfiltered. Similarly, setting this option to 1 will cause filtering to only be applied to child leaf rows 1 level deep, and so on.
 
 This is useful for situations where you want a row's entire child hierarchy to be visible, regardless of the applied filter.
 
 ```jsx
-<MantineReactTable
-  columns={columns}
-  data={data}
-  enableExpanding
-  maxLeafRowFilterDepth={0} //When filtering root rows, keep all child rows of the passing parent rows
-/>
+const table = useMantineReactTable({
+  columns,
+  data,
+  enableExpanding: true,
+  maxLeafRowFilterDepth: 0, //When filtering root rows, keep all child rows of the passing parent rows
+});
 ```
 
 ### Expand All Rows By Default
 
-You can manage the initial state of the expanded rows with the `expanded` state option in either the `initialState` or `state` props.
+You can manage the initial state of the expanded rows with the `expanded` state option in either the `initialState` or `state` table options.
 
 For example, you may want all rows to be expanded by default. To do this, you can simply set the `expanded` state option to `true`.
 
 ```jsx
-<MantineReactTable
-  columns={columns}
-  data={data}
-  enableExpanding
-  initialState={{ expanded: true }} //all rows expanded by default
-/>
+const table = useMantineReactTable({
+  columns,
+  data,
+  enableExpanding: true,
+  initialState: { expanded: true }, //all rows expanded by default
+});
 ```
 
 <ExpandedExample />
