--- a/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
@@ -12,7 +12,7 @@ import LocaleExamples from '../../../example-groups/LocaleExamples';
 
 ## Localization (i18n) Guide
 
-Mantine React Table has full support for localization (i18n). Some locales are included by default, but if your language is not yet supported, you can still easily add your own custom translations to the `localization` prop.
+Mantine React Table has full support for localization (i18n). Some locales are included by default, but if your language is not yet supported, you can still easily add your own custom translations to the `localization` table option.
 
 ### Relevant Table Options
 
@@ -34,13 +34,13 @@ Scroll and find your language below to see an example of how to use it.
 
 ### Custom Non-Built-In Translations
 
-If you want to use a language that is not included in the library, you can still easily add your own custom translations to the `localization` prop.
+If you want to use a language that is not included in the library, you can still easily add your own custom translations to the `localization` table option.
 
 ```jsx
-<MantineReactTable
-  columns={columns}
-  data={data}
-  localization={{
+const table = useMantineReactTable({
+  columns,
+  data,
+  localization: {
     actions: 'Ações',
     and: 'e',
     cancel: 'Cancelar',
@@ -51,8 +51,8 @@ If you want to use a language that is not included in the library, you can still
     clearSort: 'Limpar classificações',
     clickToCopy: 'Clique para copiar',
     // ... and many more - see link below for full list of translation keys
-  }}
-/>
+  },
+});
 ```
 
 For a full list of all available translation keys, see [here](https://github.com/KevinVandy/mantine-react-table/blob/main/packages/mantine-react-table/src/locales/en.ts)
