--- a/apps/mantine-react-table-docs/pages/blog/introducing-mantine-react-table.mdx
+++ b/apps/mantine-react-table-docs/pages/blog/introducing-mantine-react-table.mdx
@@ -39,7 +39,7 @@ I'm finally releasing `mantine-react-table` as stable with its initial V1 releas
 
 ### Building on Material React Table
 
-Mantine React Table comes as a fork on my first popular library, [Material React Table](https://material-react-table.com). The initial fork only took about a month to get up to feature parody, and it was mostly done as a proof of concept at first to see how easy it would be to create more libraries built on top of TanStack Table in the same way that I had built Material React Table. Mantine is built very similarly to Material-UI, and so it was relatively easy to fork. It had the same Emotion styled system (pre V7), and most of the components had one-to-one counterparts as Material UI.
+Mantine React Table comes as a fork on my first popular library, [Material React Table](https://material-react-table.com). The initial fork only took about a month to get up to feature parity, and it was mostly done as a proof of concept at first to see how easy it would be to create more libraries built on top of TanStack Table in the same way that I had built Material React Table. Mantine is built very similarly to Material-UI, and so it was relatively easy to fork. It had the same Emotion styled system (pre V7), and most of the components had one-to-one counterparts as Material UI.
 
 What I was not expecting, was that I would end up liking Mantine so much more than Material UI. Mantine components just seem "better by default". I ended up writing much less CSS overrides than I did with Material UI, and the components just seemed to work better out of the box. They also just look better, in my opinion, as they don't have to stick to a decade+ old Material Design spec.
 
