--- a/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
@@ -25,13 +25,13 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
 <TableOptionsTable
   onlyOptions={
     new Set([
+      'columnFilterDisplayMode',
       'columnFilterModeOptions',
       'enableColumnFilterModes',
       'enableColumnFilters',
       'enableFacetedValues',
       'enableFilterMatchHighlighting',
       'enableFilters',
-      'columnFilterDisplayMode',
       'filterFns',
       'filterFromLeafRows',
       'getFacetedMinMaxValues',
@@ -40,6 +40,7 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
       'getFilteredRowModel',
       'mantineFilterAutocompleteProps',
       'mantineFilterCheckboxProps',
+      'mantineFilterDateInputProps',
       'mantineFilterMultiSelectProps',
       'mantineFilterRangeProps',
       'mantineFilterSelectProps',
