--- a/apps/mantine-react-table-docs/pages/blog/introducing-mantine-react-table.mdx
+++ b/apps/mantine-react-table-docs/pages/blog/introducing-mantine-react-table.mdx
@@ -188,17 +188,17 @@ MRT has all of the basic table features like pagination, sorting, filtering, gro
 
 Yes! There are a couple that you should know about before choosing MRT right away.
 
-#### 1. [Mantine DataTable](https://icflorescu.github.io/mantine-datatable/)
+#### 1. Mantine DataTable
 
-Mantine DataTable has been around a bit longer that Mantine React Table, and is a very stock Mantine feeling data grid library. It has some, but not all of the same features as MRT, and it is a single component data grid library. It is high quality, and a bit lighter weight than MRT. I would almost describe it as the missing stock Mantine data grid library.
+[Mantine DataTable](https://icflorescu.github.io/mantine-datatable/) has been around a bit longer that Mantine React Table, and is a very stock Mantine feeling data grid library. It has some, but not all of the same features as MRT, and it is a single component data grid library. It is high quality, and a bit lighter weight than MRT. I would almost describe it as the missing stock Mantine data grid library.
 
-#### 2. [Mantine Data Grid](https://kuechlin.github.io/mantine-data-grid)
+#### 2. Mantine Data Grid
 
-Mantine Data Grid is another library that is built on top of TanStack Table. It does not get as much feature development as MRT or MDT. If you are considering it, make sure that the project is active and that it has the features that you need. I really respect the work done on this library with TanStack Table. It just does not seem to have as active of a community.
+[Mantine Data Grid](https://kuechlin.github.io/mantine-data-grid) is another library that is built on top of TanStack Table. It does not get as much feature development as MRT or MDT. If you are considering it, make sure that the project is active and that it has the features that you need. I really respect the work done on this library with TanStack Table. It just does not seem to have as active of a community.
 
-#### 3. [AG Grid](https://www.ag-grid.com/)
+#### 3. AG Grid
 
-If you need the best possible data grid library out there that can be a full excel replacement, use AG Grid. It is not built with Mantine, but it is the best data grid library out there. You just will have to not care about large bundle sizes, and there is a possibility that you might have to pay for a license if you need some specific advanced features.
+If you need the best possible data grid library out there that can be a full excel replacement, use [AG Grid](https://www.ag-grid.com/). It is not built with Mantine, but it is the best data grid library out there. You just will have to not care about large bundle sizes, and there is a possibility that you might have to pay for a license if you need some specific advanced features.
 
 ### What is the Future of Mantine React Table?
 
