--- a/apps/mantine-react-table-docs/pages/docs/examples/editing-crud.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/editing-crud.mdx
@@ -25,6 +25,6 @@ This example below uses the default [`"modal"`](/docs/guides/editing#modal-editi
 
 Check out the other editing modes down below, and the [editing guide](/docs/guides/editing) for more information.
 
-<Examples />
+<Examples isPage />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/features-editing-examples)**
