--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,13 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.1.0 - 2023-08-12
+
+- Fixed editing cancel button not restoring original row data
+- Fixed Filter Range Slider initial range min and max sometimes not being set correctly after loading data
+- Replaced `"Unsorted"` tooltip on header sort icon buttons with sort by next sort direction tooltip
+- Added ar translations that can be imported from `'material-react-table/locales/ar'`
+
 #### V1.0.0 - 2023-07-18
 
 - V1 Stable Release
