--- a/apps/mantine-react-table-docs/pages/docs/getting-started/typescript.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/typescript.mdx
@@ -12,7 +12,7 @@ import Head from 'next/head';
 
 TanStack Table itself is written in TypeScript, and Mantine React Table builds on top of its great type definitions for best in class TypeScript experience.
 
-However, checkout down below for [how to use JSDoc instead of TypeScript](#use-jsdoc-instead-of-typescript) to get the same type hints.
+If, however, you cannot use TypeScript in your project for some reason, checkout down below for [how to use JSDoc instead of TypeScript](#use-jsdoc-instead-of-typescript) to get the same type hints.
 
 ### Is TypeScript Required?
 
