--- a/apps/mantine-react-table-docs/pages/docs/examples/remote.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/remote.mdx
@@ -23,6 +23,6 @@ You will most likely be using a remote data source for your table, which is full
 
 Also, be sure to check out the [TanStack React Query Example](/docs/examples/react-query), which is very similar to this one, except it uses react-query to simplify much of the state management needed for fetching data.
 
-<Example />
+<Example isPage />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/prop-playground--default)**
