--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,12 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.1.2 - 2023-08-18
+
+- Disable other row edit buttons when one row is being edited by default
+- Hide global and filter text input clear buttons until there is text in the input
+- Added et translations that can be imported from `'material-react-table/locales/et'`
+
 #### V1.1.1 - 2023-08-12
 
 - Fixed editing cancel button not restoring original row data in modal editDisplayMode
