--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,11 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.2.0 - 2023-08-23
+
+- Added new `"head-overlay"` `positionToolbarAlertBanner` option to overlay the alert banner over the table header
+- Added new `renderToolbarAlertBannerContent` table option to allow full customization of the alert banner content
+
 #### V1.1.2 - 2023-08-18
 
 - Disable other row edit buttons when one row is being edited by default
