--- a/apps/mantine-react-table-docs/pages/docs/guides/pagination.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/pagination.mdx
@@ -21,7 +21,7 @@ Client-side pagination is enabled by default in Mantine React Table. There are a
 <TableOptionsTable
   onlyOptions={
     new Set([
-      'autoResetPagination',
+      'autoResetPageIndex',
       'enablePagination',
       'getPaginationRowModel',
       'manualPagination',
