--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,10 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.2.1 - 2023-09-10
+
+- Upgraded to `@tanstack/react-table v8.9.8` and `@tanstack/react-virtual v3.0.0-beta.60` for better performance and bug fixes
+
 #### V1.2.0 - 2023-08-23
 
 - Added new `"head-overlay"` `positionToolbarAlertBanner` option to overlay the alert banner over the table header
