--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,13 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.3.0 - 2023-09-18
+
+- Updated the mrt `package.json` `@mantine/` peerDependencies to `^6.0.0` to indicate that MRT v1 is now compatible with Mantine v6
+- Upgraded to `@tanstack/react-table v8.10.0`
+  - Better accessorKey deep key inference
+  - New row pinning apis (MRT does not implement row pinning features yet)
+
 #### V1.2.1 - 2023-09-10
 
 - Upgraded to `@tanstack/react-table v8.9.8` and `@tanstack/react-virtual v3.0.0-beta.60` for better performance and bug fixes
