--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,10 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.3.1 - 2023-09-25
+
+- Upgraded to latest TanStack Table `v8.10.3` various performance improvements and bug fixes
+
 #### V1.3.0 - 2023-09-18
 
 - Updated the mrt `package.json` `@mantine/` peerDependencies to `^6.0.0` to indicate that MRT v1 is now compatible with Mantine v6
